Fixed minor layout issues with main navigation styling

--- a/www/wp-content/themes/romaricpascal.is/scss/_header.scss
+++ b/www/wp-content/themes/romaricpascal.is/scss/_header.scss
@@ -54,6 +54,8 @@
   width: 80%;
   @include overlay-rightPanel(15em);
 
+  overflow: auto;
+
   .admin-bar & {
     height: calc(100vh - 32px);
   }
@@ -77,7 +79,16 @@
 .menu-item,
 .page_item {
   list-style-type: none;
-  padding: 0 0.5em;
+  text-indent: 1em;
+  padding-right: 0.5em;
+
+  .sub-menu & {
+    text-indent: 2em;
+  }
+}
+
+.current-menu-item:not(.current-menu-parent) {
+  border-left: solid 6px $rp-orange;
 }
 
 .rp-Legal {
